Add replay_available attribute to responses
