# resources/openapi/contract.yaml
@@ -8,6 +8,8 @@ info:
     be kept.
 
     TODO explain the general concept of how the API is used. Sending data to players and map endpoint first, then record ...
+
+    TODO charset is UTF-8
   version: 5.0.0
   contact:
     email: enwi2@t-online.de
@@ -87,7 +89,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/error-response"
         404:
-          description: No record found for given ID
+          description: No record or replay found for given ID
           content:
             application/json:
               schema:
@@ -170,6 +172,8 @@ components:
           type: string
         score:
           type: integer
+        replay_available:
+          type: boolean
         created_at:
           $ref: "#/components/schemas/date-time"
         updated_at:
@@ -182,7 +186,7 @@ components:
       type: object
       properties:
         id:
-          description: Unique ID, generated by the server. New record = new ID.
+          description: Unique ID, generated by the server.
           type: string
         score:
           type: integer
@@ -190,6 +194,8 @@ components:
           type: string
         player:
           $ref: "#/components/schemas/player"
+        replay_available:
+          type: boolean
         created_at:
           $ref: "#/components/schemas/date-time"
         updated_at:
@@ -246,6 +252,7 @@ components:
               enum:
               - RECORD_NOT_FOUND
               - MAP_NOT_FOUND
+              - REPLAY_NOT_FOUND
               - BANNED_PLAYER
               - INVALID_REPLAY
             message:
